fix(css) fix p and ul because too much whitespace

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -93,7 +93,7 @@ dl {
   -webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
   -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
   -o-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
-  margin: 0 0 1.75em 0;
+  margin: 0 0 0 0;
   text-rendering: geometricPrecision
 }
 
